<resources>
    <string name="app_name">Book project</string>
    <string name="register_book">Registro de un Libro</string>
    <string name="book_name">Nombre:</string>
    <string name="author">Author:</string>
    <string name="pages">Numero de Paginas</string>
    <string name="resume">Resumen:</string>
    <string name="save">Guardar</string>
    <string name="info">"Nombre: %s \nAuthor: %s \nPaginas: %d \nResumen: %s \nGénero(s): %s \nCalificación: %d \nFecha de publicación: %s</string> // playholder son plantillas//
    <string name="genere">Género</string>
    <string name="suspense">Suspenso</string>
    <string name="terror">Terror</string>
    <string name="infantile">Infantil</string>
    <string name="fiction">Ficción</string>
    <string name="ranking4">Calificacion</string>
    <string name="genre">Género</string>
    <string name="score">Calificación</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="publication_date">"Fecha de publicación "</string>
    <string name="date_format">dd-mm-yyyy</string>


</resources>